render old clock

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,9 @@ edition = "2018"
 
 [dependencies]
 sdl2="0"
+chrono="0.4"
 
 [dependencies.cairo-rs]
+version="0.8.1"
 default-features = false
 features = ["png"]
